--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -23,6 +24,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "redis": "^5.1.0",
     "socket.io": "^4.7.4",
     "zod": "^3.22.4"
   },
